fix layout for footer on mobile

--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,7 +1,17 @@
+@use '../abstracts/' as *;
+
+.footer-logo {
+	max-width: 275px;
+}
+
 .footer {
 	align-items: center;
-	justify-items: center;
+	// justify-items: center;
 	padding: 2em 0;
+
+		@include mq(medium) {
+			justify-items: center;
+		}
 }
 
 .copyright {
@@ -11,4 +21,37 @@
 .footer-phone-number {
 	text-decoration: none;
 	border-bottom: 1px solid;
+}
+
+.footer-grid-3 {
+	display: grid;
+	grid-template-columns: 1fr;
+	
+	@include mq(medium) {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+}
+
+.footer-service-areas {
+	order: 2;
+
+	@include mq(medium) {
+		order: 1;
+	}
+}
+
+.footer-logo {
+	order: 1;
+
+	@include mq(medium) {
+		order: 2;
+	}
+}
+
+.footer-hours {
+	order: 3;
+
+	@include mq(medium) {
+		order: 3;
+	}
 }
