--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as *;
 
 .logo {
-  max-width: 200px;
+  max-width: 275px;
 }
 
 .top-header {
